<resources>
    <string name="app_name">In Situ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="detected_activities_title">Detected Activities</string>

    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>

    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
    <string name="title_activity_activity_recognition">ActivityRecognitionActivity</string>
    <string name="title_activity_moves">MovesActivity</string>

    <string-array name="API_Names">
        <!-- 0 -->
        <item>Authenticate</item>
        <!-- 1 -->
        <item>Get Auth Data</item>
        <!-- 2 -->
        <item>Get Profile</item>
        <!-- 3 -->
        <item>------</item>
        <!-- 4 -->
        <item>Get Summary Day</item>
        <!-- 5 -->
        <item>Get Summary Week</item>
        <!-- 6 -->
        <item>Get Summary Month</item>
        <!-- 7 -->
        <item>Get Summary Range</item>
        <!-- 8 -->
        <item>Get Summary Past Days</item>
        <!-- 9 -->
        <item>------</item>
        <!-- 10-->
        <item>Get Storyline Day</item>
        <!-- 11-->
        <item>Get Storyline Week</item>
        <!-- 12-->
        <item>Get Storyline Month</item>
        <!-- 13-->
        <item>Get Storyline Range</item>
        <!-- 14-->
        <item>Get Storyline Past Days</item>
        <!-- 15-->
        <item>------</item>
        <!-- 16-->
        <item>Get Activities Day</item>
        <!-- 17-->
        <item>Get Activities Week</item>
        <!-- 18-->
        <item>Get Activities Month</item>
        <!-- 19-->
        <item>Get Activities Range</item>
        <!-- 20-->
        <item>Get Activities Past Days</item>
    </string-array>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_caldroid">CaldroidActivity</string>

    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="title_activity_second_intro">Create Diary</string>


    <!-- App intro-->
    <string name="skip">Y U DO DIS TO ME?</string>

    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="permission_location_rationale">We need to save your location so that we can combine information about the context in which these symptoms occured and provide you with better treatment</string>
    <string name="ok">Permit</string>
    <string name="done">Done</string>
    <string name="permision_available_location">Permission to get your location is granted</string>
    <string name="permissions_not_granted">Permission to access this device location was denied.</string>
    <string name="manage_profile">Edit your profile</string>
    <string name="profile_name">Hi %1$s</string>
    <string name="google_app_id">symptoms-1218</string>
    <string name="input_text">Looking for...</string>
    <string name="button_send">Go!</string>
    <string name="police_stations">Police Stations in Victoria</string>
    <string name="medicare">Medicare Offices</string>
    <string name="attrib_format">Data from &lt;a href = "%s">data.gov.au&lt;/a>, modified under &lt;a href = \"http://creativecommons.org/licenses/by/3.0/au/\">CC BY 3.0 AU&lt;/a></string>
    <string name="police_stations_url">http://data.gov.au/dataset/police-station-locations/resource/76110b24-0f0a-4c29-9583-3f99eaba486c</string>
    <string name="medicare_url">http://data.gov.au/dataset/location-of-medicare-offices/resource/5d38e1be-4011-49c4-8b8b-75405eeb1088</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="visibility">Toggle Vis</string>
    <string name="settings_no_mode">No Flic button? Log symptom occurrence traditionally</string>
    <string name="settings_binary_mode">Log symptom occurrence using a Flic button</string>
    <string name="settings_full_button_mode">Log intensity and symptom occurrence using a Flic button</string>
    <string name="settings_mode_text">Choose a mode to log symptoms</string>
    <string name="settings_activate_api_consumption">Choose a third party app to integrate data from</string>
    <string name="activate_moves_switch">Moves</string>
    <string name="activate_lifelog_switch">Lifelog</string>
    <string name="settings_activate_flic">Connect Flic button</string>
    <string name="activate_flic_switch">Flic Button</string>
    <string name="apply_changes">Apply</string>
    <string name="discard_changes">Discard</string>
    <string name="intro_ask_name">How shall we call you?</string>
    <string name="save_patient_info">Next</string>
    <string name="male_female">Pick your genre</string>
    <string-array name="heatmaps_datasets_array">
        <item>@string/police_stations</item>
        <item>@string/medicare</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="create_diary">Create a diary</string>
    <string name="add_symptoms_to_diary">Add symptoms</string>
    <string name="mark_error">Mark as error</string>
    <string name="add_more_info">Tell us some more</string>
    <string name="symptom_data_overview">Intensity : %1$.0f\nTime :%2$s</string>
    <string name="fixed_diary_name">%1$s\\\' diary</string>
    <string name="pie_center"><![CDATA[
    <p style="color:#F44336;font-size:large;text-alignment:center">Occurrences<br>
    %1$d<br>
   %2$.1f</p>
    ]]>
</string>
    <string name="pick_single_date">Single day</string>
    <string name="pick_range_date">Range</string>
    <string name="permission_system_alert_rationale">We need to remind you of providind additional details for better care delivery from your coach. </string>
    <string name="permision_available_system_alert">Permission to notify you is granted</string>
    <string name="symptom_details_title">Intensity: %1$.2f \n%2$s</string>
    <string name="more_info_intensity_tv">Intensity</string>
    <string name="more_info_distress_tv">Distress caused</string>
    <string name="body_part_details">Ache, sharp, throbbing, shooting, etc.</string>
    <string name="medication_details">What?How much?</string>
    <string name="body_part_title">Where did it hurt?</string>
    <string name="medication_title">Medication to relief</string>
    <string name="no_medication_treatment_title">Non drug techniques</string>
    <string name="details_no_pain">No pain</string>
    <string name="details_no_distress">No stress</string>
    <string name="details_too_much">Worst pain</string>
    <string name="more_info_head">Pain occurence %1$s %2$s.</string>
    <string name="medication_details_dialog_title">What medication did you take? How much and when?</string>
    <string name="when_hint">When?</string>
    <string name="body_part_details_dialog_title">Where exactly was the %1$s pain and how did it feel?</string>
    <string name="body_part_details_where">the right side of your</string>
    <string name="body_part_details_at">at</string>
    <string name="body_part_details_where_tv">%1$s</string>
    <string name="SelectSize">Select one</string>
    <string name="by_day">Day</string>
    <string name="by_month">Month</string>
    <string name="by_year">Year</string>
    <string name="by_hour">Hour</string>
    <string name="by_week">Week</string>
    <string name="intro_ask_age">How old are you?</string>
    <string name="intro_welcome_personal">Welcome to your first InSitu diary.\nLet us set it up together.</string>
    <string name="medication_welcome">Excellent! Now let us go over your medication.</string>
    <string name="add_medication_name">Here you can add your cancer treatment medication</string>
    <string name="use_flic_for_medication">Do you want to double click the Flic button for tracking your medication?</string>
    <string name="flic_for_medication_yes">Use Flic button</string>
    <string name="monday">Mo</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Clear</string>
    <string name="sunday">Su</string>
    <string name="saturday">Sa</string>
    <string name="friday">Fr</string>
    <string name="thursday">Th</string>
    <string name="wednesday">We</string>
    <string name="tuesday">Tu</string>
    <string name="activate_medication_alarm">Activate alarm for this medication</string>
    <string name="automatic_collection_switch">Enable automatic collection</string>
    <string name="medication_time_textview">at %1$s o\'clock each</string>
    <string name="med_name_tv">Medication name and time</string>
    <string name="med_amount_routine">Amount : </string>
    <string name="routine_medication_tv">%1$s at %2$s o\'clock every %3$s</string>
    <string name="main_head">Welcome %1$s </string>
    <string name="next_med">Medication status</string>
    <string name="pain_status">Painkiller status</string>
    <string name="last_distress"> %1$s </string>
    <string name="last_pain"> %1$s </string>
    <string name="main_head_sec">The last pain occurrence happened %1$s at %2$s </string>
    <string name="other_symptoms">Concurrent symptoms</string>

</resources>