<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_name_tv"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:id="@+id/input_medication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:inputType="text" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/pick_time_routine_med"
            android:scaleType="centerInside"
            android:src="@drawable/pick_time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/med_amount_routine"
            android:layout_height="match_parent" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:hint="100 mg"
            android:id="@+id/input_amount_med_routine"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication_time_textview"
        android:id="@+id/show_chosen_time_tv"
        android:gravity="center"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="8">

        <CheckBox
            android:id="@+id/checkbox_monday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/checkbox_tuesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:checked="true"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/checkbox_wednesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/checkbox_thursday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/checkbox_friday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/checkbox_saturday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:checked="true"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/checkbox_sunday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:checked="true"
            android:text="@string/sunday"
            />

        <CheckBox
            android:id="@+id/select_deselect_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="30dp"
            android:paddingLeft="-25dp"
            android:checked="true"
            android:text="@string/deselect_all" />


    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_medication_alarm"
        android:id="@+id/alarm_switch"
        android:layout_margin="10dp"
        android:checked="false"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automatic_collection_switch"
        android:id="@+id/automatic_collection_switch"
        android:layout_margin="10dp"
        android:checked="false"/>
    <Switch
        android:id="@+id/activate_flic_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checked="false"
        android:text="@string/flic_for_medication_yes" />
</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--android:weightSum="10">-->

    <!--<ListView-->
        <!--android:id="@+id/add_medication_lv"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="8" />-->

    <!--<com.github.clans.fab.FloatingActionButton-->
        <!--android:id="@+id/fab_create_med"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@drawable/fab_add" />-->

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/save_medication"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="Save" />&ndash;&gt;-->
<!--</LinearLayout>-->