<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FF5534"
        android:gravity="center"
        android:tag="Bottom3"
        android:weightSum="9">

        <ImageView
            android:id="@+id/trash"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/trash" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:text="@string/add_more_info"
            android:textColor="#fff"
            android:background="@color/high"
            android:id="@+id/tell_us_more"
            />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:background="@drawable/white"
            android:text="@string/mark_error"
            android:textColor="#FF5534" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_selector"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_weight="6">

        <TextView
            android:id="@+id/position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:layout_weight="1"
            android:paddingEnd="5dp"/>

        <TextView
            android:id="@+id/text_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:tag="Hover"
            android:layout_weight="4"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/symptom_data_overview" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/gesture"/>
    </LinearLayout>


</com.daimajia.swipe.SwipeLayout>